# Physorum

./: Cargo.toml  README.md  physorum.toml
src/: blit.rs  blit.wgsl  compute.wgsl  main.rs  settings.rs  shader.wgsl  simulation.rs  state.rs  timer.rs
