[package]
name = "physarum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13"
winit = "0.26"
pollster = "0.2"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
bytemuck = { version = "1.10", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.31"